kubernetes/airflow/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: airflow
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app.kubernetes.io/name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-sentinel
  namespace: airflow
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: sentinel-service
spec:
  type: ClusterIP
  ports:
    - name: sentinel
      port: 26379
      targetPort: 26379
      protocol: TCP
  selector:
    app.kubernetes.io/name: redis
